prevent website text from being highlighted when using shift key

--- a/style.css
+++ b/style.css
@@ -134,3 +134,7 @@ button {
     stroke: var(--mapCountrySelectColor);
     stroke-width: 3px;
 }
+
+* {
+    user-select: none;
+}
